# DiscordRustTesting

./: Cargo.toml  README.md
src/: main.rs  sqlHandling.rs
src/cogs/: addModRole.rs  archive.rs  ban.rs  ccBan.rs  kick.rs  mod.rs  ping.rs
src/cogs/Corsscommunity/: ccBan.rs  ccBanOverride.rs  ccGuildJoin.rs  incidentReport.rs  mod.rs
src/sql/: mod.rs  sqlHandling.rs
