[package]
name = "DiscordRust"
version = "0.1.0"
authors = ["almost333 <mike37772@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
features = ["framework", "standard_framework", "rustls_backend", "collector"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]

